--- a/src/main/resources/css/MetroMenu.css
+++ b/src/main/resources/css/MetroMenu.css
@@ -7,8 +7,13 @@
 	-fx-font-size: 150%;
     -fx-background-radius: 0;
     -fx-base: #353535;
-    -fx-text-fill: white;
+    -fx-fill: WHITE !important;
+    -fx-stroke: WHITE;
     -fx-opacity: 1;
+}
+
+.button-navigation > * {
+    -fx-fill: WHITE !important;
 }
 
 .home {
@@ -21,8 +26,8 @@
         #EEEEEE;
 }
 
-.home > .awesome {
-	-fx-text-fill: #464646 !important;
+.home > * {
+	-fx-fill: #464646 !important;
 }
 
 .button-navigation-small {
@@ -35,6 +40,10 @@
         black;
 }
 
+.button-navigation-small > * {
+    -fx-fill: WHITE !important;
+}
+
 #updateButton {
 	-fx-base: rgba(0,0,0,0.05);
 	-fx-background-radius: 100%;
@@ -45,16 +54,10 @@
         rgba(0,0,0,0.05);
 }
 
-#updateButton > .awesome {
-	-fx-text-fill: BLACK  !important;
+#updateButton > * {
+	-fx-fill: BLACK  !important;
 }
 
 .bg-black {
 	-fx-background-color: BLACK;
-}
-
-.metro-menu .awesome {
-    -fx-font-family: FontAwesome;
-    -fx-font-size: 160px;
-    -fx-text-fill: WHITE !important;
 }
