#15: Mock for a configuration panel for cluster health warnings

--- a/src/main/resources/fxml/ClusterHealthPane.fxml
+++ b/src/main/resources/fxml/ClusterHealthPane.fxml
@@ -65,7 +65,7 @@
 					</graphic>
 				</Button>
 	
-				<Button fx:id="defineWarnings" text="%cluster-health.define-warnings" contentDisplay="GRAPHIC_ONLY">
+				<Button fx:id="defineWarnings" text="%cluster-health.define-warnings" contentDisplay="GRAPHIC_ONLY" onAction="#showDefineWarningsPopover">
 					<graphic>
 						<FontAwesomeIconView glyphName="GEARS" size="25px"/>
 					</graphic>
